--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </title>
       
   <body>
-    <h1> A collection of parallel news articles in Turkish, Kurdish and English</h1>
+    <h1> Bianet </h1>
+    <h2> A collection of parallel news articles in Turkish, Kurdish and English</h2>
+    <h3> Download <\h3>
   </body>
   
 </html>
