--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <h1> Bianet </h1>
     <h2> A collection of parallel news articles in Turkish, Kurdish and English</h2>
     <h3> Download</h3>
-  </body>
-  
+    <h4> Contact: ataman@fbk.eu</h4>
+    <h5> If you use this corpus: please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. In Proceedings of the Second Workshop on Multi-Language Processing in a Globalising World.</h5>
+    <a href="http://hltdistributor.fbk.eu/redirect.php?val=991045f13daa0499e035a37d02a7cd01" target="_blank">Download ME!</a>
+    </body>
 </html>
    
           
