--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <body>
     <h1> Bianet </h1>
     <h2> A collection of parallel news articles in Turkish, Kurdish and English</h2>
-    <h3> Download</h3>
-    <h4> Contact: ataman@fbk.eu</h4>
-    <h5> If you use this corpus: please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. In Proceedings of the Second Workshop on Multi-Language Processing in a Globalising World.</h5>
+    <h3> Contact: ataman@fbk.eu</h3>
+    <h4> If you use this corpus, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. In Proceedings of the Second Workshop on Multi-Language Processing in a Globalising World.</h4>
     </body>
 </html>
    
