--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1> Bianet </h1>
     <h2> A collection of parallel news articles in Turkish, Kurdish and English</h2>
     <h3> If you use this corpus, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. In Proceedings of The Second Workshop on Multi-Language Processing in a Globalising World.</h3>
+    <i> Contact: ataman@fbk.eu</i>
   </body>
   
 </html>
