--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <h1> Bianet </h1>
     <h2> A collection of parallel news articles in Turkish, Kurdish and English</h2>
     <h3> If you use this corpus, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. In Proceedings of The Second Workshop on Multi-Language Processing in a Globalising World.</h3>
-    <h4> Download here</h4>
-    <a href="http://hltdistributor.fbk.eu/redirect.php?val=991045f13daa0499e035a37d02a7cd01" target="_blank">Download ME!</a>
+    <a href="http://hltdistributor.fbk.eu/redirect.php?val=991045f13daa0499e035a37d02a7cd01" target="_blank">Download the Bianet corpus here.</a>
     <h5> For further questions, please contact:</h5>
     <i> ataman@fbk.eu</i>
   </body>
