--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <h2> A collection of parallel news articles in Turkish, Kurdish and English</h2>
     <h3> If you use this corpus, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. In Proceedings of The Second Workshop on Multi-Language Processing in a Globalising World.</h3>
     <a href="http://hltdistributor.fbk.eu/redirect.php?val=991045f13daa0499e035a37d02a7cd01" target="_blank">Download the Bianet corpus here.</a>
-    <h3> For further questions, please contact: </h3>
-    <i> ataman@fbk.eu</i>
+    <h4> For further questions, please contact: <i> ataman@fbk.eu</i> </h4>
   </body>
-  
   
 </html>
    
