--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h2> A parallel news corpus in Turkish, Kurdish and English, collecting 3,214 Turkish articles with translations from the Bianet online newspaper.</h3>
     <h3> This corpus is distributed under the CC-BY-SA-4.0 open license. </h2>
     <h3> If you use this corpus, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. <i> In Proceedings of the LREC 2018 Workshop MLP–Moment. pp. 14-17.</i></h3>
+    <a href="http://lrec-conf.org/workshops/lrec2018/W19/pdf/6_W19.pdf">pdf</a>
     <a href="http://hltdistributor.fbk.eu/redirect.php?val=991045f13daa0499e035a37d02a7cd01" target="_blank">Click here to download the Bianet corpus</a>
     <h4> For further questions, please contact: <i> ataman@fbk.eu</i> </h4>
   </body>
