--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1> Bianet </h1>
     <h2> A parallel news corpus in Turkish, Kurdish and English <\h2>
-    <h3> Bianet collects 3,214 Turkish articles with their sentence-aligned Kurdish or English translations from the Bianet online newspaper (bianet.org).</h3>
+    <h3> Bianet collects 3,214 Turkish articles with their sentence-aligned Kurdish or English translations from the <a href="http://bianet.org/">Bianet online newspaper</a> .</h3>
     <h3> This corpus is distributed under the CC-BY-SA-4.0 open license. </h3>
     <h3> If you use Bianet, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. <i> In Proceedings of the LREC 2018 Workshop MLP–Moment. pp. 14-17.</i>
     <a href="http://lrec-conf.org/workshops/lrec2018/W19/pdf/6_W19.pdf">pdf</a> </h3>
