--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3> If you use Bianet, please cite: Ataman, D. (2018) Bianet: A Parallel News Corpus in Turkish, Kurdish and English. <i> In Proceedings of the LREC 2018 Workshop MLP–Moment. pp. 14-17.</i>
     <a href="http://lrec-conf.org/workshops/lrec2018/W19/pdf/6_W19.pdf">pdf</a> </h3>
     <a href="https://opus.nlpl.eu/Bianet.php" target="_blank">Click here to download the Bianet corpus</a>
-    <h4> For further questions, please contact: <i> ataman@fbk.eu</i> </h4>
+    <h4> For further questions, please contact: <i> ataman@cl.uzh,ch</i> </h4>
   </body>
   
 </html>
